Fixed an issue with the background stretching when there are many tables, and imporved settings style structure.

--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,22 @@ h1
     border-left: 2px solid black;
     border-right: 2px solid black;
 }
+
+.main
+{
+    position: relative;
+    min-height: 100vh;
+}
+
+.background
+{
+    position: fixed;
+    inset: 0;
+    z-index: -1;
+}
+
+.content
+{
+    position: relative;
+    z-index: 1;
+}
